--- a/_posts/2015-12-13-java-merge-sort.html
+++ b/_posts/2015-12-13-java-merge-sort.html
@@ -8,6 +8,7 @@ tags: [Algorithms, Sorting, Java]
 <!DOCTYPE html>
 <html>
 <body>
+<!--summary break-->
   {% highlight java %}
 package java2015_12;
 
