--- a/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
@@ -19,9 +19,11 @@ th, td {
 </style>
 </head>
 <body>
+<h4>
+<a href="http://store.steampowered.com/app/312530/"> Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. </h4>
+<!--summary break-->
   <br>
   <img class="alignnone size-full wp-image-52" src="https://cmudream.files.wordpress.com/2015/12/sc1-620x.jpg" alt="SC1-620x" width="620" height="349" />
-  <a href="http://store.steampowered.com/app/312530/">Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. <br>
   <br>
   <strong>Have tons of fun with Duck Game but you still ask for more? Do you want to design and add some weapons but have no idea how to start it and
   can not find a handy guide which brings you on track? Hope my notes can help you! All of them are based on my real developing experience for <a href="http://steamcommunity.com/app/312530/discussions/0/492379439683643613/">DuckGame+</a>.</strong>
