--- a/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
+++ b/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
@@ -19,6 +19,7 @@ th, td {
 </style>
 </head>
 <body>
+<!--summary break-->
   There are 3 status of duck, not only the Duck object. They are: <strong>Duck, TrappedDuck, Ragdoll</strong>.<br>
   Whenever your brand-new object needs to interact with ducks, remember to discuss all of these 3 conditions! Or the
   cunning duck can press "faint(/trip/ragdoll)" to dodge your super mega death object!<br>
