--- a/_posts/2016-2-27-operation_flat_files.html
+++ b/_posts/2016-2-27-operation_flat_files.html
@@ -8,17 +8,9 @@ tags: [Linux]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <h4>What we get: big data files in CSV format</h4>
 <h4>What we need to do: retrieve single/aggregation data via Bash Commands</h4>
 {%highlight bash%}
