--- a/_posts/2016-3-12-freecodecamp-nodejs.html
+++ b/_posts/2016-3-12-freecodecamp-nodejs.html
@@ -8,17 +8,9 @@ tags: [Node.js, FreeCodeCamp]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <a href="http://www.freecodecamp.com/">FreeCodeCamp</a>, is the next self-study challenge I decide to conquer.
 400-hour backend web development, 10 Single Page Application, time to rock!
 <h4>Asynchronous File I/O</h4>
