--- a/_posts/2016-3-5-java-multithreading-readwritelock.html
+++ b/_posts/2016-3-5-java-multithreading-readwritelock.html
@@ -8,17 +8,9 @@ tags: [Java]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <h4>Interface: ReadWriteLock</h4>
 <h4>Implementing Classes: ReentrantReadWriteLock</h4>
 It consists of a pair of associated locks.<br>
