--- a/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
+++ b/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
@@ -19,6 +19,7 @@ th, td {
 </style>
 </head>
 <body>
+<!--summary break-->
   Monitor player keyboard action to design more advanced items!<br>
   We alway meet PRESS HOLD RELEASE "FIRE" button to control our weapon<br>
   <table>
