--- a/_posts/2016-3-1-java-jdbc-mysql.html
+++ b/_posts/2016-3-1-java-jdbc-mysql.html
@@ -8,17 +8,9 @@ tags: [Java]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <h4>What we get: big data files in CSV format</h4>
 <h4>What we need to do: JDBC+MySQL to load data, execute Query/Update</h4>
 <br>
