--- a/_posts/2016-3-22-head-first-maven.html
+++ b/_posts/2016-3-22-head-first-maven.html
@@ -8,17 +8,9 @@ tags: [Java]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 Apache Maven is a software project management and comprehension tool. Based on the concept of a project object model (POM), Maven can manage a project's build, reporting and documentation from a central piece of information.
 
 <h4>Create Maven Project in Eclipse</h4>
