--- a/_posts/2016-3-22-java-head-first-mongodb.html
+++ b/_posts/2016-3-22-java-head-first-mongodb.html
@@ -8,17 +8,9 @@ tags: [Java]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <h4>What we get: a JSON data file</h4>
 <h4>What we need to do: create table and retrieve data</h4>
 <br>
