--- a/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
+++ b/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
@@ -8,17 +8,9 @@ tags: [Java]
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
 </head>
 <body>
+<!--summary break-->
 <h4>What we get: big data files compressed in .gz stored in S3 bucket</h4>
 <h4>What we need to do: create table, run complex queries and optimize performance</h4>
 <br>
