--- a/_posts/2016-4-18-head-first-aws-ec2.html
+++ b/_posts/2016-4-18-head-first-aws-ec2.html
@@ -7,24 +7,10 @@ tags: [CloudComputing]
 ---
 <!DOCTYPE html>
 <html>
-
 <head>
-    <style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-    
-    th,
-    td {
-        padding: 5px;
-    }
-    </style>
 </head>
-
 <body>
+<!--summary break-->
    <h4>Launch your EC2 instance</h4>
     <strong>Step 1: </strong>You need an AWS account first, follow <a href="https://www.youtube.com/watch?v=1ey0EDVjyeY&index=89&list=PLIGEVr8ox1oGsi-XcwSjudMi_uCPxGzSs">AWS Account Sign Up</a>.<br>
     <strong>Step 2: </strong><a href="https://www.youtube.com/watch?v=EfnfcIqq_IU&index=88&list=PLIGEVr8ox1oGsi-XcwSjudMi_uCPxGzSs">AWS Basics</a> Pay attention to the credential issues!<br>
