--- a/_posts/2016-5-15-java-sort-map-by-value.html
+++ b/_posts/2016-5-15-java-sort-map-by-value.html
@@ -1,20 +1,19 @@
---- 
-layout: post_page 
-title: "Java-Sort Map By Value Gracefully" 
-date: 2016-5-16 19:30:56 +1030 
-categories: Java 
-tags: [Java] 
+---
+layout: post_page
+title: "Java-Sort Map By Value Gracefully"
+date: 2016-5-16 19:30:56 +1030
+categories: Java
+tags: [Java]
 ---
 <!DOCTYPE html>
 <html>
-
 <head>
 </head>
-
-<body>    
+<body>
     <h4>Introduction</h4>
     <p>Sometimes we love to store our key-vale pairs into a map, and we want to sort the map both by key and by value. I believe you will fall in love with <code>TreeMap.navigableKeySet()</code>(ascending) and <code>TreeMap.descendingKeySet()</code>, but how to get entrySet by value?
 
+        <!--summary break-->
     <h4>Implementation</h4>
     Make best use of  <code>Collections.sort()</code>. The idea is learnt from <a href="http://www.mkyong.com/java/how-to-sort-a-map-in-java/">mkyong - How to sort a Map in Java</a>.
 
