[Finished] <!--summary break--> tuned

--- a/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
@@ -19,8 +19,8 @@ th, td {
 </style>
 </head>
 <body>
-<h4>
-<a href="http://store.steampowered.com/app/312530/"> Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. </h4>
+<!--summary break-->
+<h4><a href="http://store.steampowered.com/app/312530/"> Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. </h4>
 <!--summary break-->
   <br>
   <img class="alignnone size-full wp-image-52" src="https://cmudream.files.wordpress.com/2015/12/sc1-620x.jpg" alt="SC1-620x" width="620" height="349" />
