--- a/_posts/2016-3-12-freecodecamp-nodejs.html
+++ b/_posts/2016-3-12-freecodecamp-nodejs.html
@@ -13,6 +13,7 @@ tags: [Node.js, FreeCodeCamp]
 <!--summary break-->
 <a href="http://www.freecodecamp.com/">FreeCodeCamp</a>, is the next self-study challenge I decide to conquer.
 400-hour backend web development, 10 Single Page Application, time to rock!
+<!--summary break-->
 <h4>Asynchronous File I/O</h4>
 {%highlight javascript%}
 Create a program that prints a list of files in a given directory,  
