[Finished] remove useless <head><body> tags

--- a/_posts/2015-12-13-java-merge-sort.html
+++ b/_posts/2015-12-13-java-merge-sort.html
@@ -5,9 +5,6 @@ date:   2015-12-13 23:37:56 +1030
 categories: Algorithms Sorting
 tags: [Algorithms, Sorting, Java]
 ---
-<!DOCTYPE html>
-<html>
-<body>
 {% highlight java %}
 package java2015_12;
 
@@ -50,9 +47,5 @@ public class MergeSort {
 
 {% endhighlight %}
 
-Reference
-<em>
-Intro_to_Java_Programming,_Comprehensive_Version_(10th_Edition)</em>
-
-</body>
-</html>
+<h4>Reference</h4>
+<em>Intro_to_Java_Programming,_Comprehensive_Version_(10th_Edition)</em>
