--- a/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
@@ -5,20 +5,6 @@ date:   2016-1-1 22:13:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
 <!--summary break-->
 <h4><a href="http://store.steampowered.com/app/312530/"> Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. </h4>
 <!--summary break-->
@@ -148,7 +134,5 @@ public override void OnPressAction()
    <img class="alignnone size-full wp-image-54" src="https://cmudream.files.wordpress.com/2015/12/qqe688aae59bbe20160101232502.png" alt="QQ截图20160101232502" width="707" height="372" />
 
    You have made your first QUACK weapon in Duck Game!<br>
-	Reference
-  <em>decompiled C# code of DuckGame.exe</em>
-</body>
-</html>
+<h4>Reference</h4>
+<em>decompiled C# code of DuckGame.exe</em>
