--- a/_posts/2016-1-1-csharp-my-quack-cookbook-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-my-quack-cookbook-modding-in-duckgame.html
@@ -5,23 +5,8 @@ date:   2016-1-1 23:13:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
-  <br>
   <img class="alignnone size-full wp-image-52" src="https://cmudream.files.wordpress.com/2015/12/sc1-620x.jpg" alt="SC1-620x" width="620" height="349" />
-  <a href="http://store.steampowered.com/app/312530/">Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. <br>
+  <br><a href="http://store.steampowered.com/app/312530/">Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. <br>
   Welcome to Duck Game! Quack!<br>  
   The following content is notes during my mod development for <a href="http://steamcommunity.com/app/312530/discussions/0/492379439683643613/">DuckGame+</a>. All the explanation is based on my personal understanding and thus some of them may be not that accurate, while most of them can offer you a help when you get in DuckGame Modding world.
   <br>
@@ -95,8 +80,6 @@ this.gravMultiplier = 0;
   <tr><td>{% highlight C# %}"Level.CheckCircleAll&lt;Thing&gt;(this.position, 1f).Count&lt;Thing&gt;(){% endhighlight %}</td><td>count nums of "Things" within a circle with "1f" radius</td></tr>
 
   </table>
-  
-	Reference
-  <em>decompiled C# code of DuckGame.exe</em>
-</body>
-</html>
+
+<h4>Reference</h4>
+<em>decompiled C# code of DuckGame.exe</em>
