--- a/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
+++ b/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
@@ -5,20 +5,6 @@ date:   2016-1-10 21:53:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
   Monitor player keyboard action to design more advanced items!<br>
   We alway meet PRESS HOLD RELEASE "FIRE" button to control our weapon<br>
   <table>
@@ -65,11 +51,5 @@ Notice the object must be {% highlight C# %}Duck{% endhighlight %}.
 <br>
 and the result is a <strong>bool</strong> value.
 <br>
-Reference
+<h4>Reference</h4>
 <em>decompiled C# code of DuckGame.exe</em>
-
-
-
-
-</body>
-</html>
