--- a/_posts/2016-1-5-csharp-charge-cannon-modding-in-duckgame.html
+++ b/_posts/2016-1-5-csharp-charge-cannon-modding-in-duckgame.html
@@ -5,23 +5,8 @@ date:   2016-1-5 16:33:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
-  <br>
   <img class="alignnone size-full wp-image-52" src="https://cmudream.files.wordpress.com/2015/12/sc1-620x.jpg" alt="SC1-620x" width="620" height="349" />
-  <a href="http://store.steampowered.com/app/312530/">Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. <br>
+  <br><a href="http://store.steampowered.com/app/312530/">Duck Game</a>--Frenetic and comical rounds in a multiplayer arena with ducks... wearing hats and quacking. <br>
   <br>Time to make something really Quack!
 
   Charge Cannon, stems from <a href="https://www.youtube.com/watch?v=Q3StnkJKODc">Loose Cannon</a> in Team Fortress 2:
@@ -814,8 +799,5 @@ namespace DuckGame.DuckGamePlus
 {% endhighlight %}
 
    You have made a QUACK delicate and powerful weapon in Duck Game!<br>
-	Reference
-  <em>decompiled C# code of DuckGame.exe</em>
-
-</body>
-</html>
+<h4>Reference</h4>
+<em>decompiled C# code of DuckGame.exe</em>
