--- a/_posts/2016-1-6-csharp-online-game-data-synchronization-modding-in-duckgame.html
+++ b/_posts/2016-1-6-csharp-online-game-data-synchronization-modding-in-duckgame.html
@@ -5,20 +5,6 @@ date:   2016-1-6 21:12:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
   Sound effect is easy to implement in local environment by:
   {% highlight C# %}
      SFX.Play("quackYell03", 1f, Rando.Float(-0.1f, 0.1f), 0f, false);
@@ -91,14 +77,5 @@ else
 }
   {% endhighlight %}
  Now the quacking sound effect can work well when you play online with your duck friends!<br>
-	Reference
-  <em>decompiled C# code of DuckGame.exe</em>
-
-
-
-
-
-
-
-</body>
-</html>
+<h4>Reference</h4>
+<em>decompiled C# code of DuckGame.exe</em>
