--- a/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
+++ b/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
@@ -5,20 +5,6 @@ date:   2016-1-6 20:53:56 +1030
 categories: Modding
 tags: [CSharp, Modding]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
   There are 3 status of duck, not only the Duck object. They are: <strong>Duck, TrappedDuck, Ragdoll</strong>.<br>
   Whenever your brand-new object needs to interact with ducks, remember to discuss all of these 3 conditions! Or the
   cunning duck can press "faint(/trip/ragdoll)" to dodge your super mega death object!<br>
@@ -134,11 +120,5 @@ using (System.Collections.Generic.IEnumerator<TrappedDuck> enumeratorTrappedDuck
 {% endhighlight %}
 <br>
 -->
-  Reference
-  <em>decompiled C# code of DuckGame.exe</em>
-
-
-
-
-</body>
-</html>
+<h4>Reference</h4>
+<em>decompiled C# code of DuckGame.exe</em>
