--- a/_posts/2015-12-13-java-quick-sort.html
+++ b/_posts/2015-12-13-java-quick-sort.html
@@ -5,9 +5,6 @@ date:   2015-12-13 23:39:56 +1030
 categories: Algorithms Sorting
 tags: [Algorithms, Sorting, Java]
 ---
-<!DOCTYPE html>
-<html>
-<body>
   <img class="alignnone size-full wp-image-25" src="https://cmudream.files.wordpress.com/2015/12/sorting_quicksort_anim.gif" alt="Sorting_quicksort_anim" width="280" height="214" />
   <br><br>
   <strong>Hoare partition scheme</strong><br><br>
@@ -93,8 +90,6 @@ public class QuickSort {
 }
 
 {% endhighlight %}
-Reference <br>
+<h4>Reference</h4>
 <em>Quicksort From Wikipedia, the free encyclopedia</em><br>
 https://en.wikipedia.org/wiki/Quicksort<br>
-</body>
-</html>
