--- a/_posts/2016-1-21-java-head-first-regex.html
+++ b/_posts/2016-1-21-java-head-first-regex.html
@@ -5,21 +5,7 @@ date:   2016-1-21 21:50:56 +1030
 categories: Java
 tags: [Java]
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
-</style>
-</head>
-<body>
-  <table>
+<table>
 <tr ><td style="min-width:100px">\s+ </td><td>one or more whitespace</td></tr>
 <tr><td>^\d+(\.\d+)?</td><td>
 ^ defines that the patter must start at beginning of a new line.
@@ -150,13 +136,8 @@ Here the second example finds only one match, because the second occurrence of "
 {%endhighlight%}
 POSIX character for US-ASCII only, not a good chocie (different languages)
 
-Reference
+<h4>Reference</h4>
 <em>Java Regex - Tutorial</em><br>
 http://www.vogella.com/tutorials/JavaRegularExpressions/article.html<br>
 <em>Boundary Matchers</em><br>
 https://docs.oracle.com/javase/tutorial/essential/regex/bounds.html
-
-
-
-</body>
-</html>
