rm bootstrap.min.css

--- a/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
+++ b/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
@@ -2,8 +2,8 @@
 layout: post_page
 title:  "OLAP-Performance Tuning in Hive, Impala & Redshift"
 date:   2016-3-29 23:50:56 +1030
-categories: Java
-tags: [Java]
+categories: CloudComputing
+tags: [CloudComputing]
 ---
 <h4>What we get: big data files compressed in .gz stored in S3 bucket</h4>
 <h4>What we need to do: create table, run complex queries and optimize performance</h4>
