[Finished] references structure

--- a/_posts/2015-12-13-python-merge-sort.html
+++ b/_posts/2015-12-13-python-merge-sort.html
@@ -1,6 +1,6 @@
 ---
 layout: post_page
-title:  "Python--Merge Sort"
+title:  "Python-Merge Sort"
 date:   2015-12-13 23:13:56 +1030
 categories: Algorithms Sorting
 tags: [Algorithms, Sorting, Python]
@@ -104,7 +104,3 @@ tags: [Algorithms, Sorting, Python]
               k=k+1
       print("Merging ",nums)
 {% endhighlight %}
-
-<h4>Reference</h4>
-  <em>Problem Solving with Algorithms and Data Structures</em>
-  http://interactivepython.org/runestone/static/pythonds/SortSearch/TheMergeSort.html
