--- a/_posts/2016-1-21-java-head-first-regex.html
+++ b/_posts/2016-1-21-java-head-first-regex.html
@@ -134,10 +134,4 @@ Here the second example finds only one match, because the second occurrence of "
 
  
 {%endhighlight%}
-POSIX character for US-ASCII only, not a good chocie (different languages)
-
-<h4>Reference</h4>
-<em>Java Regex - Tutorial</em><br>
-http://www.vogella.com/tutorials/JavaRegularExpressions/article.html<br>
-<em>Boundary Matchers</em><br>
-https://docs.oracle.com/javase/tutorial/essential/regex/bounds.html
+POSIX character for US-ASCII only, not a good choice (different languages)
