[refactor] _layout: post_page -> post

--- a/_posts/2016-1-6-csharp-online-game-data-synchronization-modding-in-duckgame.html
+++ b/_posts/2016-1-6-csharp-online-game-data-synchronization-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-Online Game Data Synchronization-Modding in DuckGame"
 date:   2016-1-6 21:12:56 +1030
 categories: Modding
