--- a/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
+++ b/_posts/2016-1-6-csharp-three-status-of-duck-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-Three status of Duck-Modding in DuckGame"
 date:   2016-1-6 20:53:56 +1030
 categories: Modding
