--- a/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
+++ b/_posts/2016-3-29-olap-performance-tuning-in-hive-impala-redshift.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "OLAP-Performance Tuning in Hive, Impala & Redshift"
 date:   2016-3-29 23:50:56 +1030
 categories: CloudComputing
