--- a/_posts/2016-5-23-java-string-fast-split.html
+++ b/_posts/2016-5-23-java-string-fast-split.html
@@ -1,5 +1,5 @@
 --- 
-layout: post_page
+layout: post
 title: "Java-Split String Faster Than String.split()" 
 date: 2016-5-23 18:50:56 +1030 
 categories: Java 
