--- a/_posts/2015-12-13-python-merge-sort.html
+++ b/_posts/2015-12-13-python-merge-sort.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "Python-Merge Sort"
 date:   2015-12-13 23:13:56 +1030
 categories: Algorithms Sorting
