--- a/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-head-first-quack-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-Head First Quack!-Modding in DuckGame"
 date:   2016-1-1 22:13:56 +1030
 categories: Modding
