--- a/_posts/2016-1-1-csharp-my-quack-cookbook-modding-in-duckgame.html
+++ b/_posts/2016-1-1-csharp-my-quack-cookbook-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-MyQuack Cookbook!-Modding in DuckGame"
 date:   2016-1-1 23:13:56 +1030
 categories: Modding
