--- a/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
+++ b/_posts/2016-1-10-csharp-keyboard-events-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-Keyboard Events-Modding in DuckGame"
 date:   2016-1-10 21:53:56 +1030
 categories: Modding
