--- a/_posts/2016-1-5-csharp-charge-cannon-modding-in-duckgame.html
+++ b/_posts/2016-1-5-csharp-charge-cannon-modding-in-duckgame.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "C#-Charge Cannon-Modding in DuckGame"
 date:   2016-1-5 16:33:56 +1030
 categories: Modding
