--- a/_posts/2016-2-27-operation_flat_files.html
+++ b/_posts/2016-2-27-operation_flat_files.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "Linux-Bash Operations on Flat Files"
 date:   2016-2-27 20:50:56 +1030
 categories: Linux
