--- a/_posts/2016-3-5-java-multithreading-readwritelock.html
+++ b/_posts/2016-3-5-java-multithreading-readwritelock.html
@@ -1,5 +1,5 @@
 ---
-layout: post_page
+layout: post
 title:  "Java-Multithreading with ReadWriteLock"
 date:   2016-3-5 14:50:56 +1030
 categories: Java
