Added: 2017-8-10-java-dependency-injection-with-spring-framework.md

--- a/_posts/2016-3-22-java-head-first-mongodb.html
+++ b/_posts/2016-3-22-java-head-first-mongodb.html
@@ -26,7 +26,7 @@ service mongod restart
 
 <h4>MongoDB shell, <a href="https://docs.mongodb.org/manual/mongo/">read more</a></h4>
 {%highlight bash%}
-# As long as Mongo Demon(mongod) is running
+# As long as Mongo Daemon(mongod) is running
 mongo
 {%endhighlight%}
 
